Revision history for {{$dist->name}}

{{$NEXT}}
          fix docs to not suggest obsolete "Prereq" name (thanks, Ivan
          Bessarabov!)

4.300034  2013-04-13 16:56:48 Europe/London
          delay loading of CPAN::Uploader, and require a newer version to
          require HTTPS (thanks, Olivier Mengué!)

4.300033  2013-04-05 15:00:37 America/New_York
          fix .build/latest (thanks, Karen Etheridge!)

          doc fixes (thanks, Randy Stauner!)

4.300032  2013-03-29 16:41:11 America/New_York
          test_requires support for ModuleBuild and MakeMaker (thanks,
          Tatsuhiko Miyagawa!)

4.300031  2013-03-17 21:47:31 America/New_York
          stacktrace removed from exception when a plugin's minimum version
          check fails (thanks, Karen Etheridge!)

          add 'dzil listdeps --json', which lists all prerequisites broken up
          by phase and type, in readable JSON format (thanks, Karen Etheridge!)

          improve errors when there's not enough configuration and no global
          config file can be found (thanks, Dimitar Petrov)

          delay loading yet more libraries until needed (thanks, Olivier
          Mengué!)

4.300030  2013-01-30 22:25:27 America/New_York
          listdeps --versions now sorts properly (thanks, Karen Etheridge!)

          delay loading more libraries until needed (thanks, Olivier Mengué!)

          excluded filenames in GatherDir were sometimes matched too fuzzily
          (thanks, Mike Doherty)

4.300029  2013-01-14 20:03:15 America/New_York
          allow :version directive in root section to require a given version
          of Dist::Zilla

          simply and speedify some of GatherDir (Thanks, Olivier Mengué!)

4.300028  2012-10-19 10:50:42 America/New_York
          when picking modules to treat as "part of the dist," be more lax in
          understanding libraries under ./t:  ./t/lib/Foo.pm is now treated as
          providing t::lib::Foo, lib::Foo, and Foo
